# mipt-archives

./: README.md
MCS/HW1/: hw1.c  hw1_new.c  hw1_one.c  stats.txt
MCS/HW2/: mergesort.c  omp_mergesort.c  qsort.c
MCS/HW3/: pthread_mergesort.c
MCS/HW5/: random_walk_mpi.c
MCS/HW7/: mpi_io.c
SQL practice/: info.txt  task_1.txt  task_2.txt  task_3.txt  task_4.txt  task_5.txt
SQL practice/Labs/: Creation.txt  Index.sql  Insertion.txt  Isolations.docx  Queries.txt  RecursiveCTE.cpp  RecursiveCTE.txt  Trigger.txt
algorithms 1-2 sem/Task1/: Task1.c  Task10.c  Task12.c  Task14.c  Task2.c  Task3.c  Task4.c  Task5.c  Task6.c  Task7.c  Task8.c  Task9.c  review.txt
algorithms 1-2 sem/Task2/1BinaryHeap/: main.c
algorithms 1-2 sem/Task2/1HeapSort/: heap.c  heap.h  main.c
algorithms 1-2 sem/Task2/1ImprovedQuickSort/: main.c
algorithms 1-2 sem/Task2/1List/: list.c  list.h  main.c
algorithms 1-2 sem/Task2/1Matrix/: main.c
algorithms 1-2 sem/Task2/1MergeSort/: main.c
algorithms 1-2 sem/Task2/1Queue/: list.c  list.h  main.c  queue.c  queue.h
algorithms 1-2 sem/Task2/1QuickSort/: main.c
algorithms 1-2 sem/Task2/1RadixSort/: main.c
algorithms 1-2 sem/Task2/1Scobes/: list.c  list.h  main.c  stack.c  stack.h
algorithms 1-2 sem/Task2/1ShellSort/: main.c
algorithms 1-2 sem/Task2/1SortsComparing/: bubble.c  bubble.h  impquick.c  impquick.h  main.c  merge.c  merge.h  quick.c  quick.h  shell.c  shell.h  swap.c  swap.h
algorithms 1-2 sem/Task2/1Stack/: main.c  stack.c  stack.h
algorithms 1-2 sem/Task2/1Students/: main.c
algorithms 1-2 sem/task1_2sem/BigInt/: main.cpp
algorithms 1-2 sem/task1_2sem/Geometry/: main.cpp
algorithms 1-2 sem/task1_2sem/Labs/: main.cpp
algorithms 1-2 sem/task1_2sem/MapEditor/: main.cpp
algorithms 1-2 sem/task1_2sem/Names/: main.cpp
algorithms 1-2 sem/task1_2sem/Preprocessor/: input.txt  main.cpp  output.txt
algorithms 1-2 sem/task1_2sem/String/: main.cpp
algorithms 1-2 sem/task2_2sem/BFS/: main.cpp
algorithms 1-2 sem/task2_2sem/Chess/: main.cpp
algorithms 1-2 sem/task2_2sem/DFS/: main.cpp
algorithms 1-2 sem/task2_2sem/Matrix/: main.cpp
algorithms 1-2 sem/task2_2sem/Students/: main.cpp
algorithms 1-2 sem/task3_2sem/Algorithm_lib/: CMakeLists.txt  main.cpp
algorithms 1-2 sem/task3_2sem/BST/: CMakeLists.txt  main.cpp
algorithms 1-2 sem/task3_2sem/Beauty/: CMakeLists.txt  main.cpp
algorithms 1-2 sem/task3_2sem/Contest/: CMakeLists.txt  main.cpp
algorithms 3 sem/3A_solution/: CMakeLists.txt  main.cpp
algorithms 3 sem/3A_solution/src/: PrefixFunction.cpp
algorithms 3 sem/3A_solution/tests/: AlgorithmTest.cpp  BuildingTest.cpp  PrefixFunction.h
algorithms 3 sem/3B_solution/: CMakeLists.txt  main.cpp
algorithms 3 sem/3B_solution/src/: Transformations.cpp
algorithms 3 sem/3B_solution/tests/: FunctionsTest.cpp  RecoveringTest.cpp  Transformations.h
algorithms 3 sem/3D_solution/: CMakeLists.txt  main.cpp
algorithms 3 sem/3D_solution/src/: SuffixArray.cpp
algorithms 3 sem/3D_solution/tests/: AlgorithmTest.cpp  AssignmentTest.cpp  SuffixArray.h
algorithms 3 sem/4B_SegmentTree/: CMakeLists.txt  main.cpp
algorithms 3 sem/4B_SegmentTree/src/: SegmentTree.cpp
algorithms 3 sem/4B_SegmentTree/tests/: AlgorithmTest.cpp  AssignmentTest.cpp  SegmentTree.h
algorithms 3 sem/A_Arbitrage/: CMakeLists.txt  main.cpp
algorithms 3 sem/A_Arbitrage/src/: Arbitrage.cpp
algorithms 3 sem/A_Arbitrage/tests/: AlgorithmTest.cpp  Arbitrage.h  AssignmentTest.cpp
algorithms 3 sem/C_Floyd/: CMakeLists.txt  main.cpp
algorithms 3 sem/C_Floyd/src/: Graph.cpp
algorithms 3 sem/C_Floyd/tests/: FloydTest.cpp  Graph.h  InputTest.cpp
algorithms 3 sem/D_solution/: CMakeLists.txt  main.cpp
algorithms 3 sem/D_solution/src/: MST.cpp
algorithms 3 sem/D_solution/tests/: AlgorithmTest.cpp  AssignmentTest.cpp  MST.h
algorithms 3 sem/E_solution/: CMakeLists.txt  main.cpp
algorithms 3 sem/E_solution/src/: Flow.cpp
algorithms 3 sem/E_solution/tests/: AlgorithmTest.cpp  AssignmentTest.cpp  Flow.h
concurrency/: CMakeLists.txt
concurrency/task-1-A/: task_A.txt
concurrency/task-1-B/: task_B.txt
concurrency/task-1-E/: CMakeLists.txt  solution.h  task_E.txt
concurrency/task-2-A/: CMakeLists.txt  solution.h
concurrency/task-2-B/: CMakeLists.txt  Semaphore.h  robot_2legs.h  robot_2legs_sem.h  robot_n_legs.h
concurrency/task-3-A/: CMakeLists.txt  solution.h
concurrency/task-4-A/: CMakeLists.txt  solution.h
concurrency/task-4-B/: CMakeLists.txt  arena_allocator.h  solution.h
concurrency/task-6/: spsc_ring_buffer.h  tas_spinlock.h
concurrency/task-7-A/: solution.h
concurrency/task-7-B/: solution.h
formal languages/: practice1.cpp
math statistics/: 1.83.ipynb  3.83.ipynb  4.83.ipynb  5.83.ipynb
